Fix inline CSS for image resizing in work2.html

--- a/work2.html
+++ b/work2.html
@@ -58,7 +58,7 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
 
           <!-- EXERCISE IMG -->
           <div class="row">
-            <img id="exercise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="height:15%" style="width:15%">
+            <img id="exercise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="height:15;width:15%;">
           </div>
 
           <!-- INFO BUTTONS -->
@@ -104,7 +104,7 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
         <div class="container text center" id="exer2">
           <!-- EXERCISE IMG -->
           <div class="row">
-            <img id="exercise-img2" src="./img/Squat2.png" class="img-rounded" alt="Lights" style="height:15%" style="width:15%">
+            <img id="exercise-img2" src="./img/Squat2.png" class="img-rounded" alt="Lights" style="height:15%;width:15%;">
           </div>
 
           <!-- INFO BUTTONS -->
@@ -152,7 +152,7 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
 
           <div class="container text center" id="exer3">
             <div class="row">
-              <img id="exercise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="height:15%" style="width:15%">
+              <img id="exercise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="height:15%;width:15%;">
 
             </div>
             <div class="row">
