Fix column formatting in work2.html

--- a/work2.html
+++ b/work2.html
@@ -53,12 +53,12 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
     <div class="container">
       
       <!-- exercise 1 -->
-      <div class="col">  
+      <div class="col-md-4">  
         <div class="container text center" id="exer1">
 
           <!-- EXERCISE IMG -->
           <div class="row">
-            <img id="exercise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="height:15;width:15%;">
+            <img id="exercise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="height:30%;width:30%;">
           </div>
 
           <!-- INFO BUTTONS -->
@@ -100,11 +100,11 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
 
 
       <!-- exercise 2 -->
-      <div class="col">
+      <div class="col-md-4">
         <div class="container text center" id="exer2">
           <!-- EXERCISE IMG -->
           <div class="row">
-            <img id="exercise-img2" src="./img/Squat2.png" class="img-rounded" alt="Lights" style="height:15%;width:15%;">
+            <img id="exercise-img2" src="./img/Squat2.png" class="img-rounded" alt="Lights" style="height:30%;width:30%;">
           </div>
 
           <!-- INFO BUTTONS -->
@@ -148,11 +148,11 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
 
 
         <!-- exercise 3 -->
-        <div class="col">
+        <div class="col-md-4">
 
           <div class="container text center" id="exer3">
             <div class="row">
-              <img id="exercise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="height:15%;width:15%;">
+              <img id="exercise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="height:30%;width:30%;">
 
             </div>
             <div class="row">
