--- a/work.html
+++ b/work.html
@@ -80,7 +80,9 @@
       <div class="col-sm-3">
         <p text-align="center">
           <br/>
-          <button type="button" id="walk" onclick="timer(this,600)" class="btn btn-primary btn-circle btn-lg">
+          <button type="button" id="walk-btn" onclick="timer(this,600)" class="btn btn-primary btn-circle btn-lg">
+            <h2 id="timeCount">Start Now<br /></h2></button>
+            <button type="button" id="calfraise-btn" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
             <h2 id="timeCount">Start Now<br /></h2></button>
         </p>
       </div>
@@ -121,7 +123,9 @@
       <div class="col-sm-3">
         <p class="lead">
           <br />
-          <button type="button" id="squat" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
+          <button type="button" id="squat-btn" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
+            <h2 id="numCount">Start Now<br/></h2></button>
+            <button type="button" id="wallsit-btn" onclick="timer(this,30)" class="btn btn-primary btn-circle btn-lg">
             <h2 id="numCount">Start Now<br/></h2></button>
         </p>
       </div>
