moved button to top

--- a/work2.html
+++ b/work2.html
@@ -46,6 +46,7 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
       <h1 class="display-3">Today's Workout</h1>
       <p class="lead">
       <a class="btn btn-success btn-lg" href="./index.html" role="button">Return Home</a>
+      <button class="btn btn-primary btn-lg" onclick="location.href='./finish.html';"> Finish Workout </button>
       </p>
     </div>
 
@@ -195,7 +196,7 @@ Project: Workout app to assist the aging/elderly with maintaining consistent sch
           </div>
         </div>
       </div>
-      <button class="btn btn-primary btn-lg btn-block login-button" onclick="location.href='./finish.html';"> Finish Workout </button>
+      
     </div>
     <br>
 
